<resources>
    <string name="app_name">Calculator</string>
    <string name="btn_sub">-</string>
    <string name="btn_neg">+/-</string>
    <string name="btn_add">+</string>
    <string name="btn_c">C</string>
    <string name="btn_dev">/</string>
    <string name="btn_multp">*</string>
    <string name="btn_one">1</string>
    <string name="btn_two">2</string>
    <string name="btn_three">3</string>
    <string name="btn_four">4</string>
    <string name="btn_five">5</string>
    <string name="btn_six">6</string>
    <string name="btn_seven">7</string>
    <string name="btn_eight">8</string>
    <string name="btn_nine">9</string>
    <string name="btn_zero">0</string>
    <string name="btn_comma">.</string>
    <string name="btn_equal">=</string>
    <string name="Screen">0</string>
</resources>