<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="377dp"
        android:layout_height="557dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn_neg"
            android:layout_width="115dp"
            android:layout_height="92dp"
            android:layout_marginStart="10dp"
            android:text="@string/btn_neg"
            android:textSize="34sp"
            app:layout_column="1"
            app:layout_row="1" />

        <Button
            android:id="@+id/btn_comma"
            android:layout_width="115dp"
            android:layout_height="92dp"
            android:layout_marginStart="10dp"
            android:text="@string/btn_comma"
            android:textSize="34sp"
            app:layout_column="0"
            app:layout_row="5" />

        <Button
            android:id="@+id/btn_zero"
            android:layout_width="115dp"
            android:layout_height="92dp"
            android:layout_marginStart="10dp"
            android:text="@string/btn_zero"
            android:textSize="34sp"
            app:layout_column="1"
            app:layout_row="5"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <Button
            android:id="@+id/btn_equal"
            android:layout_width="115dp"
            android:layout_height="92dp"
            android:layout_marginStart="10dp"
            android:text="@string/btn_equal"
            android:textSize="34sp"
            app:layout_column="2"
            app:layout_row="5" />

        <Button
            android:id="@+id/btn_sub"
            android:layout_width="115dp"
            android:layout_height="92dp"
            android:layout_marginStart="10dp"
            android:text="@string/btn_sub"
            android:textAlignment="center"
            android:textSize="34sp"
            app:layout_column="0"
            app:layout_row="0" />

        <Button
            android:id="@+id/btn_add"
            android:layout_width="115dp"
            android:layout_height="92dp"
            android:layout_marginStart="10dp"
            android:text="@string/btn_add"
            android:textSize="34sp"
            app:layout_column="1"
            app:layout_row="0" />

        <Button
            android:id="@+id/btn_one"
            android:layout_width="115dp"
            android:layout_height="92dp"
            android:layout_marginStart="10dp"
            android:text="@string/btn_one"
            android:textSize="34sp"
            app:layout_column="0"
            app:layout_row="2" />

        <Button
            android:id="@+id/btn_div"
            android:layout_width="115dp"
            android:layout_height="92dp"
            android:layout_marginStart="10dp"
            android:text="@string/btn_dev"
            android:textSize="34sp"
            app:layout_column="0"
            app:layout_row="1" />

        <Button
            android:id="@+id/btn_two"
            android:layout_width="115dp"
            android:layout_height="92dp"
            android:layout_marginStart="10dp"
            android:text="@string/btn_two"
            android:textSize="34sp"
            app:layout_column="1"
            app:layout_row="2" />

        <Button
            android:id="@+id/btn_three"
            android:layout_width="115dp"
            android:layout_height="92dp"
            android:layout_marginStart="10dp"
            android:text="@string/btn_three"
            android:textSize="34sp"
            app:layout_column="2"
            app:layout_row="2" />

        <Button
            android:id="@+id/btn_four"
            android:layout_width="115dp"
            android:layout_height="92dp"
            android:layout_marginStart="10dp"
            android:text="@string/btn_four"
            android:textSize="34sp"
            app:layout_column="0"
            app:layout_row="3" />

        <Button
            android:id="@+id/btn_five"
            android:layout_width="115dp"
            android:layout_height="92dp"
            android:layout_marginStart="10dp"
            android:text="@string/btn_five"
            android:textSize="34sp"
            app:layout_column="1"
            app:layout_row="3" />

        <Button
            android:id="@+id/btn_six"
            android:layout_width="115dp"
            android:layout_height="92dp"
            android:layout_marginStart="10dp"
            android:text="@string/btn_six"
            android:textSize="34sp"
            app:layout_column="2"
            app:layout_row="3" />

        <Button
            android:id="@+id/btn_seven"
            android:layout_width="115dp"
            android:layout_height="92dp"
            android:layout_marginStart="10dp"
            android:text="@string/btn_seven"
            android:textSize="34sp"
            app:layout_column="0"
            app:layout_row="4" />

        <Button
            android:id="@+id/btn_eight"
            android:layout_width="115dp"
            android:layout_height="92dp"
            android:layout_marginStart="10dp"
            android:text="@string/btn_eight"
            android:textSize="34sp"
            app:layout_column="1"
            app:layout_row="4" />

        <Button
            android:id="@+id/btn_nine"
            android:layout_width="115dp"
            android:layout_height="92dp"
            android:layout_marginStart="10dp"
            android:text="@string/btn_nine"
            android:textSize="34sp"
            app:layout_column="2"
            app:layout_row="4" />

        <Button
            android:id="@+id/btn_multp"
            android:layout_width="115dp"
            android:layout_height="92dp"
            android:layout_marginStart="10dp"
            android:text="@string/btn_multp"
            android:textSize="34sp"
            app:layout_column="2"
            app:layout_row="1" />

        <Button
            android:id="@+id/btn_c"
            android:layout_width="115dp"
            android:layout_height="92dp"
            android:layout_marginStart="10dp"
            android:text="@string/btn_c"
            android:textSize="34sp"
            app:layout_column="2"
            app:layout_row="0" />
    </androidx.gridlayout.widget.GridLayout>

    <TextView
        android:id="@+id/display_tv"
        android:layout_width="358dp"
        android:layout_height="47dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/textview_border"
        android:clickable="false"
        android:inputType="numberSigned|number|numberDecimal"
        android:paddingEnd="10dp"
        android:text="@string/Screen"
        android:textAlignment="viewEnd"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textIsSelectable="false"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.279"
        tools:ignore="RtlSymmetry,TextSizeCheck,TextViewEdits,TouchTargetSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>